fix field label psedu overlap with content overlay

--- a/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/forms/forms.css
+++ b/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/forms/forms.css
@@ -190,7 +190,7 @@
     padding-left: 3px;
     padding-right: 3px;
     left: 5px;
-    z-index: 10;
+    z-index: 9;
 }
 
 .field-group.rounded.floating:not([class*="switch"]):not([class*="d-checkbox"]) .field-label span:not(:empty):after {
